# numerus

./: .ghci  .gitignore  COPYING  Procfile  README.md  numerus.cabal  template
demo/: Main.hs  numerus-demo.cabal
demo/Numerus/: Demo.hs
src/: Numerus.hs  main.hs
src/Numerus/: Core.hs
test/: Main.hs  numerus-test.cabal
test/Numerus/: Tests.hs
