Name:               numerus
Version:            0.0.1
License:            BSD3
License-File:       LICENSE
Author:             Mark Hibberd <mark@hibberd.id.au>
Maintainer:         Mark Hibberd <mark@hibberd.id.au>
Copyright:          (c) 2012 Mark Hibberd
Synopsis:           A build number server.
Category:           Web
Homepage:           https://github.com/markhibberd/numerus
Bug-reports:        https://github.com/markhibberd/numerus/issues
Cabal-Version:      >= 1.8
Build-Type:         Simple
Description:
  numerus

Source-Repository   head
  Type:             git
  Location:         https://github.com/markhibberd/numerus.git

Flag                small_base
  Description:      Choose the new, split-up base package.

Library
  Build-Depends:
                    base                            >= 3          && < 5,
                    scotty                          == 0.4.6,
                    postgresql-simple               == 0.3.3.2,
                    bytestring                      >= 0.9,
                    resource-pool                   == 0.2.1.1

  GHC-Options:
                    -Wall -fno-warn-orphans

  Hs-Source-Dirs:
                    src

  Exposed-Modules:
                    Numerus
                    Numerus.Core

executable         numerus
    ghc-options:   -Wall -threaded -O2
    main-is:           ../src/main.hs
    hs-source-dirs:    dist
    build-depends:     base, numerus
